--- a/index.html
+++ b/index.html
@@ -191,13 +191,9 @@
         <div class="contact">
           <a class="contact__link" href="mailto:batuboynukalins@gmail.com">batuboynukalins@gmail.com</a>
           <a class="contact__link" href="tel:+905536738014">+90 553 673 8014</a>
-          <a class="contact__link" href="https://github.com/USERNAME" target="_blank" rel="noopener">GitHub</a>
-          <a class="contact__link" href="https://linkedin.com/in/USERNAME" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="contact__link" href="https://github.com/bboyn" target="_blank" rel="noopener">GitHub</a>
+          <a class="contact__link" href="www.linkedin.com/in/batuhan-boynukalın-592583151" target="_blank" rel="noopener">LinkedIn</a>
         </div>
-
-        <p class="muted small">
-          Not: GitHub ve LinkedIn linklerinde USERNAME kısmını kendi kullanıcı adlarınla değiştir.
-        </p>
       </div>
 
       <footer class="footer">
